# Python-web-hw10

./: README.md  pyproject.toml
hw10_django/hw10_django/: settings.py  urls.py
hw10_django/quotes/: models.py  urls.py  views.py
hw10_django/users/: views.py
hw10_django/users/templates/users/: signup.html
